<resources>
    <string name="app_name">MealMate</string>
    <string name="meal_mate">MealMate</string>

    //Intro Screen
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">MealPlan Magic, Grocery Logic.</string>
    <string name="intro_text_description">Tired of chaotic meal prep and last-minute grocery runs? MealMate transforms the way you organize meals, shop, and share tasks—all in one intuitive app.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    //Authentication Screen
    <string name="sign_up_description_text">Enter your name, email and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email and password, to sign in with us.</string>

    //Common Strings
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign out</string>

    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="my_profile_title">My Profile</string>

    <string name="create_meal_title">Create Board</string>
    <string name="update_meal_title">Update Board</string>
    <string name="create">CREATE</string>
    <string name="save">SAVE</string>
    <string name="update_meal_board">UPDATE MEAL BOARD</string>
    <string name="create_meal_board">CREATE MEAL BOARD</string>

    <string name="meal_name">Meal Name</string>
    <string name="add_meal_board_button_description">Add a new board</string>
    <string name="no_meal_boards_available">No boards available</string>
    <string name="edit_contentDescription">editing the meal board</string>
    <string name="delete_contentDescription">Deleting the meal board\n</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_another">Add another</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="procedure">Procedure</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="meal_image">Meal Image</string>


    <string name="created_by">Created By: %1$s</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="send_shopping_list_via_sms">Send Shopping List via SMS</string>
    <string name="clear_completed_items">Clear Completed Items</string>
    <string name="add_another_ingredient">Add Another Ingredient</string>
    <string name="created_by_user">Created By: User</string>
    <string name="add_to_the_shopping_list">Add to the Shopping List</string>
    <string name="unit_e_g_grams_cups">Unit (e.g., grams, cups)</string>
    <string name="remove">Remove</string>
    <string name="created_on_01_jan_2025">Created on: 01 Jan 2025</string>
    <string name="no_items_to_show">NO ITEMS TO SHOW</string>
    <string name="slogan">Your Kitchen’s New Best Friend.</string>


</resources>