<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        android:text="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_ingredient_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="@string/quantity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_ingredient_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="@string/unit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_remove_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_light"
        android:padding="8dp"
        android:drawablePadding="4dp" />

    <CheckBox
        android:id="@+id/cb_select_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone" />
</LinearLayout>
