<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"

    tools:context=".activities.CreateMealBoardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_meal_board_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_create_meal_board_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_meal_image"
                android:layout_width="@dimen/meal_image_size"
                android:layout_height="@dimen/meal_image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/create_meal_board_content_marginTop"
                android:src="@drawable/ic_user_place_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/create_meal_board_content_marginStartEnd"
                android:layout_marginTop="@dimen/create_meal_board_content_marginTop"
                android:layout_marginEnd="@dimen/create_meal_board_content_marginStartEnd"
                android:hint="@string/meal_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_meal_image">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_meal_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/et_text_size"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/create_meal_board_content_marginStartEnd"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_meal_name">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/create_meal_board_content_padding">

                    <TextView
                        android:id="@+id/tv_ingredients_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_ingredients_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_ingredients_label" />

                    <Button
                        android:id="@+id/btn_add_another_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/add_another_ingredient"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_ingredients_list" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/create_meal_board_content_marginStartEnd"
                android:layout_marginTop="@dimen/create_meal_board_content_marginTop"
                android:layout_marginEnd="@dimen/create_meal_board_content_marginStartEnd"
                android:hint="@string/cooking_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_ingredients_list">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cooking_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/et_text_size"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_procedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/create_meal_board_content_marginStartEnd"
                android:layout_marginTop="@dimen/create_meal_board_content_marginTop"
                android:layout_marginEnd="@dimen/create_meal_board_content_marginStartEnd"
                android:hint="@string/procedure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_cooking_time">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_procedure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/et_text_size"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/create_meal_board_content_marginStartEnd"
                android:layout_marginTop="@dimen/create_meal_board_content_marginTop"
                android:layout_marginEnd="@dimen/create_meal_board_content_marginStartEnd"
                android:layout_marginBottom="@dimen/create_meal_board_content_marginBottom"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_procedure" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>